import public "skill.proto";
import public "bbproto.proto";
package bbproto;

//=======================Unit - only used at client================================================//
message UnitStatus {
	required UserUnit		userUnit	= 1;
	required UnitInfo		info		= 2;
	optional BattlePower	power		= 3;
};

message BattlePower {
	optional int32 level 		= 1; // unit level
	optional int32 attack		= 2;
	optional int32 defense		= 3;
	optional int32 hp			= 4;	
};

message HelperRequire {
    optional int32		level		= 1;
	optional int32		race		= 2;
	optional EUnitType	type		= 3;
};

message EvolveInfo {
    required int32      		evolveUnitId    = 1;
    repeated int32		      	materialUnitId  = 2;
	optional HelperRequire		helperRequire	= 3;
};

message Position {
	optional int32			x = 1;
	optional int32			y = 2;	
};

message UnitInfo { 	
	required uint32			id				= 1;
	optional string			name			= 2;
	optional int32			race			= 3;	
	optional EUnitType		type			= 4;//wind flame water, etc.
	optional int32			rare			= 5;	
	optional int32			skill1			= 6;
	optional int32			skill2			= 7;
	optional int32			leaderSkill		= 8;
	optional int32			activeSkill		= 9;
	optional int32			passiveSkill	= 10;
	optional int32			maxLevel		= 11;
	optional int32			expType			= 12;
	optional string			profile			= 13;
	repeated BattlePower	power			= 14; //diff power of each level
	optional EvolveInfo		evolveInfo		= 15;
	optional int32			cost			= 16;
	optional int32			saleValue		= 17;
	optional int32			levelUpValue	= 18;
};
//=================================================================================================//



//============== Quest -  client used only=========================================================/

message StageInfo {
	optional int32		version			= 1;
	optional uint32		id				= 2;	
	optional int32		state			= 3;
	optional int32		type			= 4; // story or event
	optional string		stageName		= 5; //
	optional string		description		= 6; //	 
	optional uint32		startTime		= 7;	
	optional uint32		endTime			= 8;
	optional int32		boostType		= 9; //coins , exp , dropRate 
	optional int32		boostValue		= 10; //X2, X3
	optional Position	pos				= 11; // stage position of the city	
	repeated QuestInfo	quests			= 12; 
};

message CityInfo {
	optional int32		version			= 1;
	optional uint32		id				= 2;	
	optional int32		state			= 3;
	optional string		cityName		= 4; //
	optional string		description		= 5; //
	optional Position	pos				= 6; // city position of the worldmap
	repeated StageInfo	stages			= 7;
};

message WorldMapInfo {
	optional int32		version			= 1;
	optional uint32		id				= 2;	
	repeated CityInfo	citys			= 3;
};

// event occure probability
message Probability {
	optional int32		id		= 1;
	optional float		rate	= 2;
};

message QuestMapInfo {
	optional int32			floors		= 1;
	repeated Probability	panelRate	= 2;
};
//=======================================================================//

